--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
@@ -31,7 +33,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.26.1",
     "swiper": "^10.3.1",
     "url": "^0.11.3"
   },
