--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dubizzle-property-sales",
+  "name": "investibayt",
   "author": "Pawan_Kumar",
   "private": true,
   "version": "0.0.0",
