--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.469.0",
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
